mucking on the about page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Claudina Sarahe">
 
   
-  <meta name="description" content="About Hi, I&#8217;m Claudina Sarahe. I&#8217;m an innovator living in New York City. The internet is my primary medium, but I passionately seek out &hellip;">
+  <meta name="description" content="About Hi, I&#8217;m Claudina Sarahe. I&#8217;m an innovator living in New York City. The internet is my primary medium, but I enjoy creating in &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -83,17 +83,11 @@
     
   </header>
   
-  <p>Hi, I&#8217;m Claudina Sarahe. I&#8217;m an innovator living in New York City. The internet is my primary medium, but I passionately seek out collaborations with like-minded folk.</p>
+  <p>Hi, I&#8217;m Claudina Sarahe. I&#8217;m an innovator living in New York City. The internet is my primary medium, but I enjoy creating in general.</p>
 
-<p>There&#8217;s lots of places on the internet to get to know more about me. Check them out</p>
+<p>There&#8217;s lots of places on the internet to get to know more about me. Will list them here for you soon. Try Google for now.</p>
 
-<ul>
-<li>Workfu</li>
-<li>LinkedIn</li>
-</ul>
-
-
-<p>Want more information than you can find? Email me.</p>
+<p>Want more information than you can find? <a href="&#x6d;&#97;&#105;&#108;&#116;&#x6f;&#58;&#x69;&#116;&#x73;&#64;&#x6d;&#x69;&#115;&#115;&#x63;&#x73;&#46;&#x6d;&#101;">&#x69;&#x74;&#115;&#x40;&#109;&#x69;&#115;&#x73;&#99;&#115;&#x2e;&#x6d;&#101;</a></p>
 
   
 </article>
