--- a/public/about/index.html
+++ b/public/about/index.html
@@ -87,7 +87,7 @@
 
 <p>There&#8217;s lots of places on the internet to get to know more about me. Will list them here for you soon. Try Google for now.</p>
 
-<p>Want more information than you can find? <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#58;&#105;&#x74;&#x73;&#64;&#x6d;&#x69;&#115;&#115;&#99;&#115;&#46;&#109;&#x65;">&#105;&#116;&#115;&#64;&#x6d;&#x69;&#115;&#115;&#x63;&#x73;&#x2e;&#109;&#101;</a></p>
+<p>Want more information than you can find? <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#x69;&#116;&#115;&#64;&#x6d;&#105;&#115;&#x73;&#99;&#x73;&#46;&#x6d;&#x65;">&#105;&#x74;&#115;&#x40;&#x6d;&#x69;&#x73;&#x73;&#99;&#x73;&#x2e;&#x6d;&#x65;</a></p>
 
   
 </article>
