--- a/public/about/index.html
+++ b/public/about/index.html
@@ -87,7 +87,7 @@
 
 <p>There&#8217;s lots of places on the internet to get to know more about me. Will list them here for you soon. Try Google for now.</p>
 
-<p>Want more information than you can find? <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#105;&#x74;&#115;&#64;&#x6d;&#x69;&#x73;&#115;&#x63;&#x73;&#x2e;&#109;&#101;">&#105;&#x74;&#x73;&#64;&#109;&#x69;&#115;&#115;&#x63;&#115;&#x2e;&#x6d;&#101;</a></p>
+<p>Want more information than you can find? <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#105;&#116;&#115;&#64;&#109;&#105;&#115;&#115;&#x63;&#115;&#46;&#x6d;&#101;">&#105;&#116;&#115;&#64;&#109;&#105;&#x73;&#115;&#99;&#115;&#46;&#x6d;&#x65;</a></p>
 
   
 </article>
@@ -114,7 +114,7 @@
   </ul>
   <script type="text/javascript">
     $.domReady(function(){
-      getTwitterFeed("itsmisscs", 4, false);
+      getTwitterFeed("itsmisscs", 4, true);
     });
   </script>
   <script src="/javascripts/twitter.js" type="text/javascript"> </script>
@@ -180,15 +180,6 @@
   
 
 
-
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) {return;}
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#appId=212934732101925&xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 
 
