--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
   <p>CS is a developer/designer hybrid living and working in New York City. 2012 Buspreneur <a href="http://www.twitter.com/#/thestartupbus">@thestartupbus</a>. Organizer for NYC Sass Meetup. <a href="http://http://www.radiohive.org/category/shows/family-album" title="My Family Album, A Music Radio Show">Radio maker</a></p>
 </section>
 
-<section>
+Included file &#8216;asides/happenings.html&#8217; not found in _includes directory<section>
   <h1>Recent Posts</h1>
   <ul id="recent_posts">
     
@@ -166,7 +166,7 @@
   </ul>
   <script type="text/javascript">
     $.domReady(function(){
-      getTwitterFeed("itsmisscs", 7, true);
+      getTwitterFeed("itsmisscs", 5, true);
     });
   </script>
   <script src="/javascripts/twitter.js" type="text/javascript"> </script>
